--- a/scroll-animation-main/index.html
+++ b/scroll-animation-main/index.html
@@ -26,7 +26,7 @@
         margin-left: 0;
         margin-right: 50%;
         flex: 1;
-        padding: 0 20px;
+        padding: 0 40px;
         background-color: #020814;
         display: flex;
         justify-content: center;
@@ -41,7 +41,7 @@
         padding-bottom: 30px;
         width: 100%;
         height: auto;
-        margin: 20px 70px;
+        margin: 20px 0;
         display: flex;
         flex-direction: column;
         align-items: center;
